name:                monumental-ruby
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elpinal/monumental-ruby
license:             MIT
license-file:        LICENSE
author:              El Pin Al
maintainer:          example@example.com
copyright:           2017 El Pin Al
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , filepath >= 1.4.1.1
                     , directory >= 1.3.1.1
                     , process >= 1.4.3.0
                     , safe-exceptions >= 0.1.5.0
                     , unix >= 2.7.2.1
                     , containers >= 0.5.7.1
                     , mtl >= 2.2.1
  default-language:    Haskell2010

executable monumental-ruby
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monumental-ruby
  default-language:    Haskell2010

test-suite monumental-ruby-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monumental-ruby
                     , hspec
  other-modules:       LibSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elpinal/monumental-ruby
